main.css
/* ############### Universal  ###################*/

html, body
{
	margin:0;
	padding: 0;	
	height: 100%;
	margin: 0;
	overflow-x: hidden;
	overflow-y: visible;
}
* 
{
	box-sizing: border-box;
}
h1
{
	color: #fff;
}

/* ############### Desktop - Navigation  ###################*/
/*  --------------- navbar ---------------- */
nav
{
	background-color: black;
	display:flex;
	width: 60px;
	height: 100%;
	min-height: 500px;
	position: absolute;
	top:0;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;
}

/*  --------------- navbar - navbar main ---------------- */
div.nav-main
{
	width: 100%;
	height: 40%;
}

div.nav-main ul
{
	width: 100%;
	height: 100%;
	padding: 0;
	display:flex;
	flex-direction: column;
	list-style-type: none;
	justify-content: space-between;
	align-items: center;
	align-content: center;

}
div.nav-main ul li
{
	text-align: center;
}

div.nav-main ul li a
{
	color: #fff;
	text-decoration: none;

}
nav div.nav-main ul li a.active,
nav div.nav-main ul li a:hover
{
	color: red;
}
nav div.nav-main ul li a:hover i 
{
	opacity: 1;
}


/*  --------------- navbar-  social media ---------------- */
nav div.social-media ul
{
	padding: 0;

}
nav div.social-media li 
{
	padding: 5px;
}
nav div.social-media ul li a
{
	color: #fff;
	text-decoration: none;
	
} 
nav div.social-media ul li a i 
{
	font-size: 20px;
}
nav div.social-media ul li a:hover
{
	color: red;
}

/*  --------------- navbar- mobile toggle ---------------- */
#mobile-toggle 
{
	display:none;
	
}


/* ############### Desktop - Body  ###################*/
/*  --------------- main body container ---------------- */
div.container-main
{
	position: absolute;
	left: 60px;
	top: 0;
	width: 100%;
	height: 100%;
	min-height: 500px;
	margin:0;
	padding: 0;
	background-color: rgb(3, 8, 59);
} 

/*  --------------- main body primary msg ---------------- */

div.primary-msg
{
	position: absolute;
	bottom: 40%;
	left: 10%;
}





/* ############### Tablet - Navigation ###################*/
@media screen and (max-width: 990px) and (min-width: 551px)
{
	/*  --------------- navbar ---------------- */
	nav
	{
		height: 60px;
		min-height: 0 ;
		width: 100%;
		position: absolute;
		top:0;
		flex-direction: row;
		justify-content: space-between;
	}
	/*  --------------- navbar main ---------------- */
	div.nav-main
	{
		width: 40%;
		height: 100%;
	}
	div.nav-main ul
	{	
		margin: 0; 
		padding: 0;
		display:flex;
		flex-direction: row;
		list-style-type: none;
	}
	/*  --------------- navbar - social media ---------------- */
	div.social-media ul
	{
		display: flex;
		flex-direction: row;
		list-style-type: none;
	}
	div.social-media ul li
	{
		padding: 5px;
	}
	div.social-media ul li a
	{
		text-decoration: none;
	}
}



/* ############### Mobile - Navigation ###################*/
@media screen and (max-width: 550px)
{
	/*  --------------- navbar ---------------- */
	nav
	{
		position: absolute;
		height: 60px;
		min-height: 0 ;
		width: 100%;
		top:0;
		display: block;
		z-index: 10;
	}
	/*  --------------- navbar -  main ---------------- */
	div.nav-main
	{
		position: absolute;
		display: block;
		top: 60px;
		left: 100%;
		height: 60px;
		background-color: black;
		width: 100%;
		opacity: 0;
		transition: all 0.3s ease-out;

	}
	div.nav-main ul
	{
		position: relative;
		height: 60px;
		width: 90%;
		left: 5%;
		display: flex;
		flex-direction: row;
		margin: 0;
		padding: 0;
		z-index : 10;
		transition: all 0.3s ease-out;

	}
	div.nav-main ul li
	{
		transition: all 0.3s ease-out;
	}
	/*  --------------- navbar - social media ---------------- */
	div.social-media
	{
		display: none;
	}

	
	/*  --------------- navbar - mobile ---------------- */
	#mobile-toggle 
	{
		padding: 0;
		position: absolute;
		display: block;
		right: 20px;
		top: 0;
		min-width:30px;
		text-decoration:none;
		color: #fff;
		z-index: 100;
		opacity: 1;
	}
	#mobile-toggle i 
	{
		position: absolute;
		top:14px;
		color: #fff;
	}

}


/* ############### Tablet - Body ###################*/
@media screen and (max-width: 990px) and (min-width: 551px)
{
	/*  --------------- main body ---------------- */
	/*  --------------- main body container ---------------- */
	div.container-main
	{
		
		position: absolute;
		left: 0;
		top: 60px;
		width: 100%;
		margin: 0;
		padding: 0;
		
	}
}

/* ############### Mobile - Body ###################*/
@media screen and (max-width: 550px)
{
	/*  --------------- main body ---------------- */
	html
	{
		overflow-y: auto;
		overflow-x: hidden;
	}
	body
	{
		overflow-y: auto;
		overflow-x: hidden;
	}
	/*  --------------- main body container ---------------- */
	div.container-main
	{
		position: absolute;
		left: 0;
		top: 60px;
		width: 100%;
		margin: 0;
		padding: 0;
		overflow-y: auto;
		overflow-x: hidden;
			z-index: 0;
	}
	div.primary-msg
	{
		overflow-y: auto;
		overflow-x: hidden;
	}


}

